// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component snapshot Test renders a button that is diabled 1`] = `
<button
  className=" z-10 relative text-blue-800 w-fit rounded-full overflow-hidden p-1 w-[21.4375] h-[3.75rem] "
  disabled={true}
  onClick={[Function]}
>
  <div
    className="relative py-2 px-4 rounded-full z-10 h-full w-full flex justify-center items-center transition-all font-['MuseoSans'] text-base font-bold leading-6 text-white bg-[#001B80] opacity-30 disabled"
    style={
      {
        "transitionDuration": "10000ms",
      }
    }
  >
    Button
  </div>
</button>
`;

exports[`Button component snapshot Test renders a button with animated border 1`] = `
<button
  className=" z-10 relative text-blue-800 w-fit rounded-full overflow-hidden p-1 w-[21.4375] h-[3.75rem] cursor-pointer"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="absolute z-0 aspect-square min-w-[125%] min-h-[125%] top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 flex"
  >
    <div
      className="bg-gradient-to-r from-[#98E5FF] from-5% via-[#020369] to-95% to-[#98E5FF] z-0 h-full w-full animate-magicButtonGradient"
      style={
        {
          "backgroundSize": "400% 400%",
        }
      }
    />
  </div>
  <div
    className="relative py-2 px-4 rounded-full z-10 h-full w-full flex justify-center items-center transition-all font-['MuseoSans'] text-base font-bold leading-6 text-[#020369] bg-white animated"
    style={
      {
        "transitionDuration": "10000ms",
      }
    }
  >
    Button
  </div>
</button>
`;
